Prevents sections from overlapping

--- a/styles.css
+++ b/styles.css
@@ -479,7 +479,7 @@ article {
 /* projects */
 
 #projects {
-    height: 100vh;
+    /* height: 100vh; */
     font-family: 'Nunito', sans-serif;
     margin: 0 10%;
 
@@ -488,7 +488,7 @@ article {
 #projects .row {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    /* height: 100%; */
 
 }
 
@@ -555,7 +555,7 @@ article {
 
 /* team */
 #team {
-    height: 60vh;
+    /* height: 60vh; */
     font-family: 'Nunito', sans-serif;
     margin: 0 10%;
 
